git commit -m "final"

--- a/.env
+++ b/.env
@@ -3,10 +3,10 @@ SPORTSRADAR_COMPETITIONS_API_KEY=VPNA04V7WMbAPitBEgPLNnarj9aK9rbPDYc32oAN
 SPORTSRADAR_COMPLEXES_API_KEY=7fFsD3qcQjK2l5oEVXjhaQvddlgyXlg2k2ZakvKW
 SPORTSRADAR_COMPETITORS_API_KEY=MAOPo4Crih71UeehJdCvmv5wEzJj4VC0xoy6hZvD
 
-# PostgreSQL Database Credentials
-DB_TYPE=postgresql
-DB_USER=postgres               # PostgreSQL username
-DB_PASSWORD=123456             # PostgreSQL password
-DB_HOST=localhost              # Database server IP/hostname
-DB_PORT=5432                   # PostgreSQL port
-DB_NAME=sports_radar_db        # Name of the database 
+# Database Credentials
+DB_TYPE=mysql
+DB_HOST=localhost
+DB_PORT=3306
+DB_NAME=sports_radar_db
+DB_USER=root
+DB_PASSWORD=Amit@1977
